0.6.0 - currently working on
- [#2676] Fix: Test errors for inexistent objects in the specialized contact form and thumbnails view
- [#2658] Change: Add more tests for the mappers and model
- [#2626] Feature: Add a pageFinder class
- [#2663] Feature: Create a model and mapper FrontEndUserGroup
- [#2659] Fix: Autoloader should not bail out on an empty class name
- [#2662] Fix: Include of the FE class fails if tslib is not defined
- [#2530] Feature: Enhance the mailer classes to also send HTML e-mails
- [#2664] Feature: Add dataMapper::getNewGhost
- [#2457] Feature: Add foreign key mapping
- [#2653] Change: Rename the "empty" state to "virgin"
- [#2657] Change: testingFramework::cleanUp should clean up the mapper registry and everything
- [#2217] Fix: tx_oelib_testingFramework::cleanUp() must not fail if a file created by the testing framework does not exist
- [#2531] Feature: Enhance the mailer classes to also be able to add attachments
- [#2623] Feature: Adapt the Mailer classes to send a Mail object
- [#2356] Feature: The data mapper should also load hidden records
- [#788] Fix: Use t3lib_div::trimExplode instead of explode
- [#2641] Change: tx_oelib_db::tableHasColumn can improve its caching
- [#2632] Feature: Add a function oelib_db::existsTable
- [#2627] Feature: Add a parameter $recordData to createAndLoginFrontEndUser
- [#2629] Cleanup: Remove XCLASS stuff from all classes in tests/ and tests/fixtures/
- [#2459] Feature: Add getAsModel to the model class
- [#2654] Feature: Add Model::existsKey()
- [#2652] Change: Enable query logging in the DB query wrappers
- [#2645] Feature: Add a status "dead" for models that could not be found in the DB
- [#2481] Feature: Add a function DataMapper::existsModelWithUid
- [#2642] Fix: Login fails with TYPO3 4.2.5
- [#2451] Fix: Undefined variable in createRelationAndUpdateCounter
- [#2554] Feature: Create new Mail class that represents one e-mail