@@ -1187,10 +1187,12 @@ class tx_oelib_templatehelper extends tx_oelib_salutationswitcher {
 	 * Checks whether a front end user is logged in.
 	 *
 	 * @return boolean true if a user is logged in, false otherwise
+	 *
+	 * @deprecated 2009-02-06 use tx_oelib_Mapper_FrontEndUser::isLoggedIn
 	 */
 	public function isLoggedIn() {
-		return ((boolean) $GLOBALS['TSFE'])
-			&& is_array($GLOBALS['TSFE']->fe_user->user);
+		return tx_oelib_MapperRegistry::get('tx_oelib_Mapper_FrontEndUser')
+			->isLoggedIn();
 	}
 
 	/**
